--- a/wksp/timehammer/core/src/main/resources/application.yaml
+++ b/wksp/timehammer/core/src/main/resources/application.yaml
@@ -29,6 +29,11 @@ mp:
         topic: holidays-worker-update
         value:
           deserializer: com.kronostools.timehammer.common.messages.schedules.deserializers.UpdateWorkersHolidayWorkerJacksonDeserializer
+      command-id:
+        connector: smallrye-kafka
+        topic: command-id
+        value:
+          deserializer: com.kronostools.timehammer.common.messages.telegramchatbot.deserializers.TelegramChatbotInputMessageJacksonDeserializer
     outgoing:
       holidays-worker-get:
         connector: smallrye-kafka
@@ -43,5 +48,10 @@ mp:
       holidays-clean-summary:
         connector: smallrye-kafka
         topic: holidays-clean-summary
+        value:
+          serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+      command-process:
+        connector: smallrye-kafka
+        topic: command-process
         value:
           serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
