- (WIP) event-driven architecture refactor - added module commandprocessor - (WIP) implementing logic in commandprocessor for input messages

--- a/wksp/timehammer/servicebase/pom.xml
+++ b/wksp/timehammer/servicebase/pom.xml
@@ -32,6 +32,7 @@
   </dependencies>
 
   <modules>
+    <module>../commandprocessor</module>
     <module>../core</module>
     <module>../comunytek</module>
     <module>../integration</module>
