- (WIP) event-driven architecture refactor - implemented logic in commandprocessor for input messages - some fixes in order to make working the flow of an input message

--- a/wksp/timehammer/commandprocessor/src/main/resources/application.yaml
+++ b/wksp/timehammer/commandprocessor/src/main/resources/application.yaml
@@ -24,8 +24,5 @@ timehammer:
 
 "%localdemo":
   timehammer:
-    baseUrl: http://192.168.86.168:9000
-
-"%remotedemo":
-  timehammer:
-    baseUrl: https://timehammer.kronostools.com
+    domain:
+      base-url: http://192.168.86.168:9000
