- (WIP) event-driven architecture refactor - (WIP) processing registration request

--- a/wksp/timehammer/commandprocessor/src/main/resources/application.yaml
+++ b/wksp/timehammer/commandprocessor/src/main/resources/application.yaml
@@ -17,9 +17,9 @@ mp:
         topic: notification-telegram
         value:
           serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
-      worker-register-route:
+      worker-register-validate:
         connector: smallrye-kafka
-        topic: worker-register-route
+        topic: worker-register-validate
         value:
           serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 
