- (WIP) event-driven architecture refactor - (WIP) processing registration request

--- a/wksp/timehammer/web/src/main/resources/application.yaml
+++ b/wksp/timehammer/web/src/main/resources/application.yaml
@@ -16,6 +16,11 @@ mp:
         topic: timemachine
         value:
           deserializer: com.kronostools.timehammer.common.messages.timemachine.deserializers.TimeMachineEventJacksonDeserializer
+      worker-register-notify-in:
+        connector: smallrye-kafka
+        topic: worker-register-notify
+        value:
+          deserializer: com.kronostools.timehammer.common.messages.registration.deserializers.WorkerRegistrationRequestJacksonDeserializer
     outgoing:
       timemachine-out:
         connector: smallrye-kafka
