- (WIP) event-driven architecture refactor - (WIP) processing registration request

--- a/wksp/timehammer/core/src/main/resources/application.yaml
+++ b/wksp/timehammer/core/src/main/resources/application.yaml
@@ -95,3 +95,8 @@ mp:
         topic: worker-register-notify
         value:
           serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+      notification-telegram:
+        connector: smallrye-kafka
+        topic: notification-telegram
+        value:
+          serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
