--- a/wksp/timehammer/servicebase/pom.xml
+++ b/wksp/timehammer/servicebase/pom.xml
@@ -32,6 +32,7 @@
   </dependencies>
 
   <modules>
+    <module>../catalog</module>
     <module>../commandprocessor</module>
     <module>../core</module>
     <module>../comunytek</module>
