- (WIP) event-driven architecture refactor - added schedule to update workers status

--- a/wksp/timehammer/scheduler/src/main/resources/application.yaml
+++ b/wksp/timehammer/scheduler/src/main/resources/application.yaml
@@ -17,6 +17,11 @@ mp:
         topic: schedule-clean-holidays
         value:
           serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+      schedule-update-status:
+        connector: smallrye-kafka
+        topic: schedule-update-status
+        value:
+          serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
       schedule-summary:
         connector: smallrye-kafka
         topic: schedule-summary
