--- a/wksp/timehammer/core/src/main/resources/application.yaml
+++ b/wksp/timehammer/core/src/main/resources/application.yaml
@@ -19,6 +19,11 @@ mp:
         topic: schedule-update-holidays
         value:
           deserializer: com.kronostools.timehammer.common.messages.schedules.deserializers.ScheduleTriggerMessageJacksonDeserializer
+      schedule-update-status:
+        connector: smallrye-kafka
+        topic: schedule-update-status
+        value:
+          deserializer: com.kronostools.timehammer.common.messages.schedules.deserializers.ScheduleTriggerMessageJacksonDeserializer
       schedule-clean-holidays:
         connector: smallrye-kafka
         topic: schedule-clean-holidays
@@ -58,6 +63,11 @@ mp:
       holidays-worker-get:
         connector: smallrye-kafka
         topic: holidays-worker-get
+        value:
+          serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+      status-worker-get:
+        connector: smallrye-kafka
+        topic: status-worker-get
         value:
           serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
       holidays-worker-summary:
