--- a/wksp/timehammer/statemachine/pom.xml
+++ b/wksp/timehammer/statemachine/pom.xml
@@ -17,6 +17,11 @@
   <dependencies>
     <dependency>
       <groupId>${quarkus.platform.group-id}</groupId>
+      <artifactId>quarkus-cache</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
