--- a/wksp/timehammer/statemachine/src/main/resources/application.yaml
+++ b/wksp/timehammer/statemachine/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ mp:
         topic: status-worker-process
         value:
           deserializer: com.kronostools.timehammer.common.messages.schedules.deserializers.UpdateWorkersStatusWorkerJacksonDeserializer
-      status-worker-notify-in:
+      status-worker-notify:
         connector: smallrye-kafka
         topic: status-worker-notify
         value:
@@ -15,5 +15,10 @@ mp:
       status-worker-notify-out:
         connector: smallrye-kafka
         topic: status-worker-notify
+        value:
+          serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+      notification-telegram:
+        connector: smallrye-kafka
+        topic: notification-telegram
         value:
           serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
