- (WIP) event-driven architecture refactor - (WIP) update worker status

--- a/wksp/timehammer/scheduler/src/main/resources/application.yaml
+++ b/wksp/timehammer/scheduler/src/main/resources/application.yaml
@@ -72,3 +72,5 @@ timehammer:
     schedules:
       update-workers-holidays:
         enabled: false
+      update-workers-status:
+        enabled: false
